--- a/src/mylangchain_app/05LangGraph/00_LangChain _LangGraph_비교.ipynb
+++ b/src/mylangchain_app/05LangGraph/00_LangChain _LangGraph_비교.ipynb
@@ -10,6 +10,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# poetry add langgraph"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 1,
       "metadata": {},
       "outputs": [
@@ -18,7 +27,7 @@
           "output_type": "stream",
           "text": [
             "sk\n",
-            "NY\n"
+            "WA\n"
           ]
         }
       ],
@@ -37,25 +46,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "client=<openai.resources.chat.completions.completions.Completions object at 0x0000015371F0F530> async_client=<openai.resources.chat.completions.completions.AsyncCompletions object at 0x0000015371F35DF0> model_name='solar-pro' temperature=0.5 model_kwargs={} upstage_api_key=SecretStr('**********') upstage_api_base='https://api.upstage.ai/v1'\n"
+            "client=<openai.resources.chat.completions.completions.Completions object at 0x000001F20EAB35F0> async_client=<openai.resources.chat.completions.completions.AsyncCompletions object at 0x000001F20EAF4830> model_name='solar-pro' temperature=0.5 model_kwargs={} upstage_api_key=SecretStr('**********') upstage_api_base='https://api.upstage.ai/v1'\n",
+            "**LangGraph**는 **대규모 언어 모델(LLM)**을 기반으로 한 **복잡한 대화형 애플리케이션**을 구축하기 위한 오픈소스 프레임워크입니다. 특히 **상태(State) 관리**와 **멀티턴 대화 흐름**을 체계적으로 제어할 수 있도록 설계되었으며, LangChain과 통합되어 확장성을 제공합니다.\n",
+            "\n",
+            "### 핵심 특징:\n",
+            "1. **상태 기반 대화 관리**  \n",
+            "   - 사용자 세션의 상태(메모리, 컨텍스트)를 자동으로 추적하여 복잡한 대화 흐름을 구현합니다.  \n",
+            "   - 예: 이전 대화 기록을 기반으로 다음 응답을 생성하거나 의사 결정 트리를 구축.\n",
+            "\n",
+            "2. **그래프 기반 아키텍처**  \n",
+            "   - 대화를 **노드(Node)**와 **엣지(Edge)**로 구성된 그래프 구조로 모델링합니다.  \n",
+            "   - 분기 조건, 루프, 병렬 처리 등 유연한 흐름 설계가 가능합니다.\n",
+            "\n",
+            "3. **LangChain과의 통합**  \n",
+            "   - LangChain의 도구 호출, 메모리, 체인 기능을 활용해 LLM 기반 애플리케이션을 쉽게 확장할 수 있습니다.\n",
+            "\n",
+            "4. **확장성**  \n",
+            "   - 커스텀 노드/엣지를 추가해 비즈니스 로직이나 외부 API 연동이 가능합니다.\n",
+            "\n",
+            "### 사용 사례:\n",
+            "- **챗봇**: 다단계 폼 작성, 고객 지원 자동화  \n",
+            "- **에이전트 시스템**: 문서 분석 → 요약 → 사용자 질의 응답  \n",
+            "- **게임/튜토리얼**: 상태 변화에 따른 동적 대화 흐름  \n",
+            "\n",
+            "### 예시 코드 (간단한 그래프):\n",
+            "```python\n",
+            "from langgraph import State, Graph\n",
+            "\n",
+            "state = State()\n",
+            "graph = Graph(state)\n",
+            "\n",
+            "@graph.node\n",
+            "def start(state):\n",
+            "    state[\"step\"] = 1\n",
+            "    return {\"next\": {\"where_to_go\": \"question_1\"}}\n",
+            "\n",
+            "@graph.node\n",
+            "def question_1(state):\n",
+            "    if state[\"step\"] == 1:\n",
+            "        return {\"next\": {\"where_to_go\": \"end\"}}\n",
+            "\n",
+            "graph.add_node(\"start\", start)\n",
+            "graph.add_node(\"question_1\", question_1)\n",
+            "graph.add_edge(\"start\", \"question_1\")\n",
+            "graph.compile()\n",
+            "```\n",
+            "\n",
+            "LangGraph는 LLM 애플리케이션의 **복잡성**을 추상화하고 **유지보수성**을 높이는 데 중점을 둔 프레임워크입니다. 공식 문서(https://langchain-ai.github.io/langgraph/)에서 더 자세한 정보를 확인할 수 있습니다.\n"
           ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "AIMessage(content='**LangGraph**는 **LLM(Large Language Model) 기반의 복잡한 대화형 애플리케이션**을 구축하기 위한 오픈소스 프레임워크로, **LangChain**과 긴밀하게 통합되어 있습니다. 주로 **상태(State)가 있는 멀티턴 대화 시스템**을 설계할 때 유용하며, 그래프 기반 아키텍처를 통해 대화의 흐름을 체계적으로 관리할 수 있게 해줍니다.\\n\\n### 주요 특징\\n1. **그래프 기반 대화 흐름**  \\n   - 대화를 **노드(Node)**와 **엣지(Edge)**로 표현해 복잡한 분기 조건(if-else, 루프, 병렬 처리 등)을 시각적으로 구성할 수 있습니다.  \\n   - 예: 사용자 입력에 따라 다른 LLM 체인을 호출하거나, 외부 API 호출 후 결과를 바탕으로 경로를 변경.\\n\\n2. **상태(State) 관리**  \\n   - 대화 기록, 변수, 컨텍스트를 자동으로 추적하여 **장기적인 대화**에서도 일관성을 유지합니다.  \\n   - 예: 이전 대화에서 언급된 사용자 선호도를 기억해 개인화된 응답 생성.\\n\\n3. **LangChain과의 통합**  \\n   - LangChain의 `Chains`, `Agents`, `Memory` 등을 LangGraph 노드로 쉽게 통합할 수 있습니다.  \\n   - 예: RAG(Retrieval-Augmented Generation) 체인을 그래프에 연결해 동적 지식 검색 구현.\\n\\n4. **확장성**  \\n   - 커스텀 노드/엣지, 상태 업데이트 로직, 조건 분기 로직을 추가할 수 있어 유연한 설계가 가능합니다.\\n\\n### 사용 사례 예시\\n- **고객 지원 봇**: 사용자 질문에 따라 FAQ 검색 → 지식 부족 시 인간 상담원 연결.  \\n- **교육 튜터**: 학습자 수준에 따라 다른 설명 경로 제공.  \\n- **워크플로우 자동화**: 문서 분석 → 요약 → 승인 요청 같은 다단계 프로세스.\\n\\n### 간단한 예시 코드\\n```python\\nfrom langgraph import State, BaseGraph\\n\\nclass SimpleGraph(BaseGraph):\\n    @classmethod\\n    def define_nodes(cls):\\n        return {\\n            \"start\": cls.start_node,\\n            \"process\": cls.process_node,\\n            \"end\": cls.end_node,\\n        }\\n\\n    @staticmethod\\n    def start_node(state: State, inputs: dict):\\n        state[\"counter\"] = 0\\n        return {\"next\": {\"counter\": 1}}\\n\\n    @staticmethod\\n    def process_node(state: State, inputs: dict):\\n        state[\"counter\"] += 1\\n        if state[\"counter\"] < 3:\\n            return {\"next\": {\"counter\": state[\"counter\"]}}\\n        else:\\n            return {\"end\": {}}\\n\\n# 그래프 실행 및 상태 추적\\ngraph = SimpleGraph()\\nresponse = graph.run({\"input\": \"start\"})\\n```\\n\\nLangGraph는 **복잡한 대화 로직**을 코드보다는 **구조화된 그래프**로 표현할 수 있어 개발 생산성을 높이는 것이 핵심 장점입니다. 공식 문서(https://langchain.com/projects/langgraph)에서 자세한 튜토리얼을 확인할 수 있습니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 566, 'prompt_tokens': 19, 'total_tokens': 585, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'solar-pro2-250909', 'system_fingerprint': None, 'id': '6a4953a5-26ad-4e6f-833e-61de61d20161', 'service_tier': None, 'finish_reason': 'stop', 'logprobs': None}, id='run--403c3f77-4f41-4563-8f3c-39794bf21cd6-0', usage_metadata={'input_tokens': 19, 'output_tokens': 566, 'total_tokens': 585, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
-            ]
-          },
-          "execution_count": 2,
-          "metadata": {},
-          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -72,8 +117,8 @@
         "print(llm)\n",
         "\n",
         "query = 'LangGraph는 무엇인가요?'\n",
-        "llm.invoke(query)\n",
-        "\n"
+        "ai_msg = llm.invoke(query)\n",
+        "print(ai_msg.content)"
       ]
     },
     {
@@ -91,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -99,7 +144,7 @@
         "from typing_extensions import TypedDict # 구조화된 딕셔너리 타입을 정의하기 위해 \n",
         "\n",
         "from langgraph.graph.message import add_messages \n",
-        "from langchain_core.messages import AnyMessage # LangChain에서 사용하는 모든 종류의 메시지(예: HumanMessage, AIMessage)\n",
+        "from langchain_core.messages import AnyMessage # LangChain에서 사용하는 모든 종류의 메시지(예: HumanMessage, AIMessage, ToolMessage)\n",
         "\n",
         "# AgentState는 에이전트의 현재 상태를 나타내는 딕셔너리 타입을 정의합니다.\n",
         "# TypedDict를 사용하면 딕셔너리가 어떤 키와 값 타입을 가져야 하는지 명확하게 지정할 수 있습니다.\n",
@@ -120,13 +165,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'langgraph.graph.state.StateGraph'>\n"
+          ]
+        }
+      ],
       "source": [
         "from langgraph.graph import StateGraph\n",
         "\n",
-        "graph_builder = StateGraph(AgentState)"
+        "graph_builder = StateGraph(AgentState)\n",
+        "print(type(graph_builder))"
       ]
     },
     {
@@ -141,10 +195,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Node 역할을 하는 함수의 인자로 state 객체를 사용함  LLM을 호출하는 노드\n",
         "def generate(state: AgentState) -> AgentState:\n",
         "    \"\"\"\n",
         "    `generate` 노드는 사용자의 질문을 받아서 응답을 생성하는 노드입니다.\n",
@@ -166,21 +221,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "<langgraph.graph.state.StateGraph at 0x1e5fbbf1f70>"
+              "<langgraph.graph.state.StateGraph at 0x1f20ee9bd70>"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
+        "# LLM을 호출하는 generate 함수를 Node로 추가함\n",
         "graph_builder.add_node('generate', generate)"
       ]
     },
@@ -194,16 +250,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "<langgraph.graph.state.StateGraph at 0x1e5fbbf1f70>"
+              "<langgraph.graph.state.StateGraph at 0x1f20ee9bd70>"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -224,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -262,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -299,12 +355,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* https://mermaid.live/ 에서  mermain_code 로 직접 확인한다.\n"
+        "* https://mermaid.live/ 에서  mermain_code 로 직접 확인한다.\n",
+        "\n",
+        "* [Graph 이미지](https://mermaidchart.com/play?utm_source=mermaid_live_editor&utm_medium=share#pako:eNpVkN1ugjAUx1-lObvRBLCAVq3Gm_kIu9q6mAqn0AwKKSWZM777KirR3vR8_f7n4wxZkyNwKKxsS_Kx3wgj3OHQOWn9N_natrvR287a3feUc6607dy1sECDVjqcPIzpDUeTj_Bgj2glb-QoSsJwRx745ll0yNz5IZF5uNujIjkq2VeOKF1V_E0liioVVNpgWKIuSsfjKHkBhoGH8rBpZabdidOXgutYd7mjOjKVQeBPonPgzvYYQI22llcXzsIQIsCVWKMA7s1c2h8Bwlw800rz2TT1A7NNX5TAlaw67_Vt7tfaa-mPXY9R6xdE-970xgFP4kED-Bl-gaeURYyyNEmXbJGuaDIP4OTDLIqT-XoVp2tK54ytLwH8DV1ptFou6NOLL_-94J8W) "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -321,14 +379,18 @@
       "source": [
         "from langchain_core.messages import HumanMessage\n",
         "\n",
+        "query = 'LangGraph는 무엇인가요? LangChain과의 차이점은 무엇인가요?'\n",
         "initial_state = {'messages': [HumanMessage(query)]}\n",
-        "graph.invoke(initial_state)"
+        "result = graph.invoke(initial_state)\n",
+        "\n",
+        "print(type(result))\n",
+        "print(result)"
       ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "chatbot-0lCeHk3W-py3.12",
+      "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
       "language": "python",
       "name": "python3"
     },
