--- a/src/mylangchain_app/05LangGraph/00_LangChain _LangGraph_비교.ipynb
+++ b/src/mylangchain_app/05LangGraph/00_LangChain _LangGraph_비교.ipynb
@@ -362,18 +362,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "{'messages': [AIMessage(content='**LangGraph**는 **LangChain**과 통합된 **그래프 기반의 상태 관리 프레임워크**로, 복잡한 LLM(Large Language Model) 애플리케이션의 흐름을 구조화하고 관리하기 위해 설계되었습니다. 주로 **대화형 멀티모달 애플리케이션**이나 **상태 유지가 필요한 장기 작업**에 적합하며, 다음과 같은 핵심 특징을 가집니다:\\n\\n---\\n\\n### 1. **주요 개념**\\n- **그래프 구조**: 상태 전이를 노드와 간선으로 표현해 복잡한 대화 흐름을 시각화합니다.\\n- **상태 관리**: 사용자 세션, 메모리, 외부 데이터베이스와의 연동을 체계적으로 처리합니다.\\n- **LangChain 통합**: LangChain의 체인, 에이전트와 결합해 유연한 파이프라인 구축이 가능합니다.\\n\\n---\\n\\n### 2. **사용 사례**\\n- **대화형 챗봇**: 사용자 입력을 기반으로 동적 대화 흐름 제어 (예: 폼 채우기, 의사결정 트리).\\n- **장기 작업**: 여러 단계에 걸친 작업 처리 (예: 예약 시스템, 문서 분석).\\n- **멀티모달 애플리케이션**: 텍스트, 이미지, 음성 등을 조합한 복합 작업.\\n\\n---\\n\\n### 3. **주요 구성 요소**\\n- **Nodes**: LLM 호출, 도구 사용, 상태 업데이트 등의 단위 작업.\\n- **Edges**: 노드 간 전환 조건 (예: 사용자 입력에 따른 분기).\\n- **State**: 그래프 실행 중 유지되는 데이터 (메모리, 세션 정보 등).\\n\\n---\\n\\n### 4. **LangChain과의 차별점**\\n- **LangChain**은 단일/순차적 체인에 강점이 있지만, **LangGraph**는 분기, 루프, 병렬 처리 등 **비선형 흐름**에 최적화되어 있습니다.\\n- 예시:  \\n  ```python\\n  from langgraph import State, BaseGraph\\n  from langchain_community.chat_models import ChatOpenAI\\n\\n  class MyGraph(BaseGraph):\\n      def __init__(self):\\n          self.llm = ChatOpenAI()\\n\\n      @State()\\n      def start(self, state):\\n          response = self.llm.call(\"다음 단계를 알려주세요.\")\\n          state[\"response\"] = response\\n          return \"next_step\"  # 다음 노드로 이동\\n\\n  graph = MyGraph()\\n  result = graph.run(\"start\", {})  # 그래프 실행\\n  ```\\n\\n---\\n\\n### 5. **장점**\\n- **확장성**: 복잡한 로직을 모듈화해 유지보수 용이.\\n- **디버깅**: 그래프 시각화로 흐름 추적 간편.\\n- **재사용성**: 노드/엣지 단위로 컴포넌트를 재사용 가능.\\n\\n---\\n\\n### 6. **한계**\\n- 학습 곡선이 존재 (그래프 설계 및 상태 관리 이해 필요).\\n- 실시간 애플리케이션에는 추가적인 최적화가 필요할 수 있음.\\n\\nLangGraph는 **LangChain의 확장 도구**로, 특히 **상태 기반 애플리케이션**을 구축할 때 강력한 프레임워크를 제공합니다. 공식 문서([LangGraph GitHub](https://github.com/langchain-ai/langgraph))에서 더 자세한 예제를 확인할 수 있습니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 563, 'prompt_tokens': 19, 'total_tokens': 582, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'solar-pro2-250909', 'system_fingerprint': None, 'id': '1258542a-5306-4405-8f6e-71345e96d84f', 'service_tier': None, 'finish_reason': 'stop', 'logprobs': None}, id='run--bbe7b06c-73d0-4480-967d-d7ce376621fd-0', usage_metadata={'input_tokens': 19, 'output_tokens': 563, 'total_tokens': 582, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})]}"
-            ]
-          },
-          "execution_count": 26,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'dict'>\n",
+            "<class 'langchain_core.messages.ai.AIMessage'>\n",
+            "[AIMessage(content='**LangGraph**와 **LangChain**은 모두 LLM(대형 언어 모델) 기반 애플리케이션 개발을 위한 프레임워크이지만, 목적과 기능에서 차이가 있습니다.  \\n\\n### 1. **LangGraph란?**  \\n- **상태(State) 기반 LLM 애플리케이션**을 구축하기 위한 프레임워크로, **대화형 에이전트**나 **복잡한 워크플로우**를 설계할 때 유용합니다.  \\n- **그래프 구조**를 사용해 상태 전이를 명시적으로 정의할 수 있어, 다중 턴 대화, 조건부 분기, 메모리 관리 등이 필요한 시나리오에 적합합니다.  \\n- LangChain의 확장 도구로 개발되었으며, `LangChain Core`와 통합되어 동작합니다.  \\n\\n**주요 특징:**  \\n- **상태 관리**: 대화 기록, 사용자 입력, 시스템 상태 등을 추적합니다.  \\n- **그래프 기반 워크플로우**: 노드(에이전트/툴)와 엣지(전이 조건)로 흐름을 시각화합니다.  \\n- **비동기 지원**: 실시간 애플리케이션에 최적화되었습니다.  \\n\\n---\\n\\n### 2. **LangChain과의 차이점**  \\n| **기준**          | **LangChain**                          | **LangGraph**                          |\\n|-------------------|----------------------------------------|----------------------------------------|\\n| **목적**          | LLM 기반 애플리케이션의 **모듈 조합** (체인, 에이전트, 메모리 등) | **상태 전이**와 **대화 흐름** 관리       |\\n| **구조**          | 선형/분기형 체인                        | 그래프 기반 상태 머신                   |\\n| **사용 사례**     | 단일 턴 Q&A, 문서 요약, 간단한 에이전트 | 다중 턴 대화, 게임, 복잡한 워크플로우    |\\n| **상태 관리**     | 기본 메모리 제공 (ConversationBuffer 등) | 명시적인 상태 객체(`State`)와 전이 로직 |\\n| **통합**          | 다양한 LLM/툴과의 호환성 강조           | LangChain Core와 결합해 확장성 제공     |\\n\\n---\\n\\n### 3. **예시: LangGraph vs. LangChain**  \\n- **LangChain**으로 \"문서 검색 → 답변 생성\" 체인을 구축한다면,  \\n- **LangGraph**로는 \"사용자 질문 → 검색 필요 여부 판단 → 검색 실행/생략 → 답변 생성\"과 같은 **조건부 흐름**을 설계할 수 있습니다.  \\n\\n```python\\n# LangGraph 예시 (의사 코드)\\nfrom langgraph import State, Graph\\n\\nstate = State(question=\"What\\'s the weather?\", step=0)\\ngraph = {\\n    \"Check_Weather\": {\"next\": {\"search_needed\": \"Search_Web\", \"default\": \"Answer\"}},\\n    \"Search_Web\": {\"next\": \"Answer\"},\\n    \"Answer\": {\"next\": \"end\"}\\n}\\n```\\n\\n---\\n\\n### 4. **결론**  \\n- **LangChain**은 LLM 애플리케이션의 **구성 요소**를 제공하는 반면,  \\n- **LangGraph**는 **대화 흐름**과 **상태 관리**를 위한 고급 도구를 제공합니다.  \\n- 복잡한 멀티턴 애플리케이션에서는 두 프레임워크를 함께 사용하는 경우가 많습니다.  \\n\\n> 🔍 **참고**: LangGraph는 LangChain 생태계의 일부로, [공식 문서](https://langchain.com/docs/langgraph)에서 자세한 예제를 확인할 수 있습니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 631, 'prompt_tokens': 25, 'total_tokens': 656, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'solar-pro2-250909', 'system_fingerprint': None, 'id': 'e69c8764-4d50-4746-92c2-4e79bbcf46cb', 'service_tier': None, 'finish_reason': 'stop', 'logprobs': None}, id='run--8ced7667-4993-476f-ab2b-1be2e933c1e8-0', usage_metadata={'input_tokens': 25, 'output_tokens': 631, 'total_tokens': 656, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})]\n"
+          ]
         }
       ],
       "source": [
@@ -384,7 +383,33 @@
         "result = graph.invoke(initial_state)\n",
         "\n",
         "print(type(result))\n",
-        "print(result)"
+        "print(type(result['messages'][0]))\n",
+        "print(result['messages'])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### 2개의 AI 에이전트 협력하기\n",
+        "* 첫번째 AI 에이전트\n",
+        "    * 사용자의 질문을 분석하고 핵심 키워드아 배경 정보를 추가하는 역할\n",
+        "* 두번째 AI 에이전트\n",
+        "    * 첫번째 에이전트가 제공한 정보를 기반으로 좀 더 자세한 답변을 생성하는 역할    "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from langgraph.graph import StateGraph\n",
+        "from pprint import pprint\n",
+        "\n",
+        "#첫번째 AI 에이전트\n",
+        "def agent_1(state):\n",
+        "    \"\"\"사용자의 질문을 분석하고 핵심 키워드아 배경 정보를 추가하는 역할\"\"\"\n"
       ]
     }
   ],
