--- a/src/mylangchain_app/05LangGraph/00_LangChain _LangGraph_비교.ipynb
+++ b/src/mylangchain_app/05LangGraph/00_LangChain _LangGraph_비교.ipynb
@@ -429,14 +429,16 @@
         "    \"\"\"사용자의 질문을 분석하고 핵심 키워드아 배경 정보를 추가하는 역할\"\"\"\n",
         "    query = state['query']\n",
         "    \n",
-        "    keywords = llm.invoke(f'질문: {query}\\n이 질문에서 핵심 키워드를 3~5개 추출해 주세요.')\n",
+        "    keywords = llm.invoke(f'질문: {query}\\n 이 질문에서 핵심 키워드를 3~5개 추출해 주세요.')\n",
         "\n",
         "     # 질문과 관련된 배경 정보 제공\n",
-        "    background_info = llm.invoke(f\"질문: {query}\\n이 질문을 이해하는 데 도움이 될 만한 추가 정보를 제공해 주세요.\")\n",
+        "    background_info = llm.invoke(f\"질문: {query}\\n 이 질문을 이해하는 데 도움이 될 만한 추가 정보를 제공해 주세요.\")\n",
         "\n",
         "    print(f\"\\n[Agent 1] 원본 질문: {query}\")\n",
         "    print(f\"[Agent 1] 핵심 키워드: {keywords}\")\n",
-        "    print(f\"[Agent 1] 배경 정보: {background_info}\\n\")"
+        "    print(f\"[Agent 1] 배경 정보: {background_info}\\n\")\n",
+        "\n",
+        "    return {\"refined_query\": query, \"keywords\": keywords, \"background_info\": background_info}"
       ]
     }
   ],
