--- a/src/mylangchain_app/05LangGraph/00_LangChain _LangGraph_비교.ipynb
+++ b/src/mylangchain_app/05LangGraph/00_LangChain _LangGraph_비교.ipynb
@@ -417,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -439,6 +439,17 @@
         "    print(f\"[Agent 1] 배경 정보: {background_info}\\n\")\n",
         "\n",
         "    return {\"refined_query\": query, \"keywords\": keywords, \"background_info\": background_info}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 두번째 AI 에이전트\n",
+        "def agent_2(state):\n",
+        "    \"\"\"첫번째 에이전트가 제공한 정보를 기반으로 좀 더 자세한 답변을 생성하는 역할\"\"\""
       ]
     }
   ],
