--- a/src/mylangchain_app/05LangGraph/00_LangChain _LangGraph_비교.ipynb
+++ b/src/mylangchain_app/05LangGraph/00_LangChain _LangGraph_비교.ipynb
@@ -449,7 +449,22 @@
       "source": [
         "# 두번째 AI 에이전트\n",
         "def agent_2(state):\n",
-        "    \"\"\"첫번째 에이전트가 제공한 정보를 기반으로 좀 더 자세한 답변을 생성하는 역할\"\"\""
+        "    \"\"\"첫번째 에이전트가 제공한 정보를 기반으로 좀 더 자세한 답변을 생성하는 역할\"\"\"\n",
+        "    refined_query = state['refined_query']\n",
+        "    keywords = state['keywords']\n",
+        "    background_info = state['background_info']\n",
+        "\n",
+        "    # Agent 1이 제공한 정보를 활용하여 최종 답변 생성\n",
+        "    final_response = llm.invoke(\n",
+        "        f\"질문: {refined_query}\\n\"\n",
+        "        f\"핵심 키워드: {keywords}\\n\"\n",
+        "        f\"배경 정보: {background_info}\\n\"\n",
+        "        f\"위 정보를 바탕으로 질문에 대해 깊이 있는 답변을 작성해 주세요.\"\n",
+        "    )\n",
+        "\n",
+        "    print(f\"[Agent 2] 최종 답변 생성 완료\\n\")\n",
+        "    \n",
+        "    return {\"final_answer\": final_response}"
       ]
     }
   ],
