--- a/src/mylangchain_app/05LangGraph/00_LangChain _LangGraph_비교.ipynb
+++ b/src/mylangchain_app/05LangGraph/00_LangChain _LangGraph_비교.ipynb
@@ -633,7 +633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -645,7 +645,7 @@
         }
       ],
       "source": [
-        "pprint(result)"
+        "print(result)"
       ]
     },
     {
