--- a/src/mylangchain_app/05LangGraph/02_LangGraph_StateGraph.ipynb
+++ b/src/mylangchain_app/05LangGraph/02_LangGraph_StateGraph.ipynb
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -420,6 +420,7 @@
     "# llm = ChatOpenAI(model=\"gpt-4o-mini\")\n",
     "\n",
     "from langchain_upstage import ChatUpstage\n",
+    "\n",
     "llm = ChatUpstage(\n",
     "        model=\"solar-pro\",\n",
     "        base_url=\"https://api.upstage.ai/v1\",\n",
@@ -430,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,12 +548,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`(4) 엣지(Edge)`"
+    "`(4) 엣지(Edge)`\n",
+    "* routing(분기)를 처리하는 노드"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,9 +584,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<langgraph.graph.state.StateGraph at 0x1b90885e660>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langgraph.graph import StateGraph, START, END\n",
     "\n",
@@ -595,19 +608,32 @@
     "# --- 노드 추가 ---\n",
     "# 각 노드는 그래프의 한 단계를 나타내며, 특정 작업을 수행합니다.\n",
     "# \"get_user_query\": 사용자의 입력(질문)을 가져오는 노드\n",
+    "# MenuState 객체의 user_query 변수에 값을 저장하는 노드\n",
     "builder.add_node(\"get_user_query\", get_user_query)\n",
     "\n",
     "# \"analyze_input\": 사용자 질의가 메뉴와 관련 있는지 분석하는 노드\n",
+    "# MenuState 객체의 is_menu_related 변수에 값을 저장하는 노드\n",
     "builder.add_node(\"analyze_input\", analyze_input)\n",
     "\n",
     "# \"search_menu_info\": 메뉴 관련 질의일 경우, 벡터DB에서 정보를 검색하는 노드\n",
+    "# MenuState 객체의 search_results 변수에 값을 저장하는 노드\n",
     "builder.add_node(\"search_menu_info\", search_menu_info)\n",
     "\n",
     "# \"generate_menu_response\": 검색된 메뉴 정보를 바탕으로 답변을 생성하는 노드\n",
+    "# MenuState 객체의 final_answer 변수에 값을 저장하는 노드\n",
     "builder.add_node(\"generate_menu_response\", generate_menu_response)\n",
     "\n",
     "# \"generate_general_response\": 메뉴와 관련 없는 일반적인 질문에 답변하는 노드\n",
-    "builder.add_node(\"generate_general_response\", generate_general_response)\n",
+    "# MenuState 객체의 final_answer 변수에 값을 저장하는 노드\n",
+    "builder.add_node(\"generate_general_response\", generate_general_response)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# --- 엣지(연결) 추가 ---\n",
     "# 그래프의 시작점을 정의하고, 노드들을 순서대로 연결합니다.\n",
@@ -615,7 +641,15 @@
     "builder.add_edge(START, \"get_user_query\")\n",
     "\n",
     "# \"get_user_query\" 노드에서 \"analyze_input\" 노드로 이동합니다.\n",
-    "builder.add_edge(\"get_user_query\", \"analyze_input\")\n",
+    "builder.add_edge(\"get_user_query\", \"analyze_input\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# --- 조건부 엣지 추가 ---\n",
     "# \"analyze_input\" 노드의 결과에 따라 동적으로 다음 노드를 결정합니다.\n",
