message basic update

--- a/src/mylangchain_app/05LangGraph/03_LangGraph_MessageState_RAG.ipynb
+++ b/src/mylangchain_app/05LangGraph/03_LangGraph_MessageState_RAG.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +17,7 @@
      "output_type": "stream",
      "text": [
       "sk\n",
-      "NY\n"
+      "WA\n"
      ]
     }
    ],
@@ -79,15 +79,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "from langchain_community.vectorstores import FAISS\n",
     "from langchain_core.messages import HumanMessage, AIMessage\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_core.runnables import RunnablePassthrough\n",
+    "from langchain_core.documents import Document\n",
     "\n",
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_upstage import UpstageEmbeddings\n",
@@ -95,7 +99,6 @@
     "\n",
     "# LangGraph MessagesState라는 미리 만들어진 상태를 사용\n",
     "from langgraph.graph import MessagesState\n",
-    "from langchain_core.documents import Document\n",
     "from langgraph.graph import StateGraph, START, END\n",
     "\n",
     "from textwrap import dedent\n",
@@ -104,15 +107,12 @@
     "\n",
     "import gradio as gr\n",
     "\n",
-    "from pprint import pprint\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n"
+    "from pprint import pprint\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -120,25 +120,28 @@
      "output_type": "stream",
      "text": [
       "solar-pro\n",
-      "채식주의자를 위한 메뉴로 다음과 같이 추천해드릴 수 있습니다:\n",
+      "채식주의자를 위한 메뉴로 다음과 같은 옵션을 추천드립니다:  \n",
       "\n",
-      "1. **가든 샐러드 (₩12,000)**  \n",
-      "   - **채식 유형**: 비건(Vegan)  \n",
-      "   - **특징**: 유기농 채소(믹스 그린, 체리 토마토, 오이, 당근)로 구성된 완전한 채식 메뉴입니다. 발사믹 드레싱으로 가볍게 즐길 수 있으며, 동물성 재료가 전혀 포함되지 않았습니다.\n",
+      "### 1. **가든 샐러드 (₩12,000)**  \n",
+      "   - **특징**: 완전한 채식 메뉴로, 유기농 채소(믹스 그린, 체리 토마토, 오이, 당근)와 발사믹 드레싱으로 구성됩니다.  \n",
+      "   - **추천 이유**: 신선함과 다양한 식감, 건강한 재료만 사용해 채식주의자에게 적합합니다.  \n",
       "\n",
-      "2. **트러플 리조또 (₩22,000)**  \n",
-      "   - **채식 유형**: 락토-오보(Lacto-Ovo, 유제품/계란 포함)  \n",
-      "   - **특징**: 아르보리오 쌀과 블랙 트러플, 파르미지아노 치즈로 만든 크리미한 리조또입니다. 해산물이나 고기는 없지만 치즈가 포함되어 있어 엄격한 비건에게는 부적합할 수 있습니다.\n",
+      "### 2. **트러플 리조또 (₩22,000)**  \n",
+      "   - **특징**: 아르보리오 쌀, 블랙 트러플, 파르미지아노 레지아노 치즈로 만든 크리미한 리조또입니다.  \n",
+      "   - **확인 필요**: 치즈(파르미지아노) 포함 여부를 확인해야 합니다. 만약 **락토-오보 채식**이라면 선택 가능합니다.  \n",
       "\n",
-      "3. **버섯 크림 수프 (₩10,000)**  \n",
-      "   - **채식 유형**: 락토(Lacto, 유제품 포함)  \n",
-      "   - **특징**: 양송이버섯과 표고버섯을 생크림과 함께 끓여 만든 수프입니다. 트러플 오일과 파슬리로 풍미를 더했으나, 생크림이 포함되어 비건 메뉴는 아닙니다.\n",
+      "### 3. **버섯 크림 수프 (₩10,000)**  \n",
+      "   - **특징**: 양송이버섯과 표고버섯을 생크림과 트러플 오일로 조리한 수프입니다.  \n",
+      "   - **추천 이유**: 동물성 재료가 없어 **비건**도 즐길 수 있습니다(단, 생크림의 원유가 아닌 식물성 크림인지 확인 필요).  \n",
       "\n",
-      "### 추가 참고 사항\n",
-      "- **안심 스테이크 샐러드**와 **해산물 파스타**, **치킨 콘피**는 동물성 재료가 포함되어 채식 메뉴에서 제외됩니다.  \n",
-      "- 엄격한 **비건**을 위한 메뉴는 **가든 샐러드**가 유일합니다. 다른 메뉴는 유제품(치즈, 생크림)이 포함될 수 있으니 확인이 필요합니다.  \n",
+      "### 제외할 메뉴  \n",
+      "- **안심 스테이크 샐러드**, **치킨 콘피**, **해산물 파스타**는 각각 소고기, 닭, 해산물이 포함되어 채식 메뉴가 아닙니다.  \n",
       "\n",
-      "예약 시 채식 유형(비건/락토-오보 등)을 미리 알려주시면 더 정확한 메뉴 안내가 가능합니다! 🌱\n"
+      "### 추가 요청 사항  \n",
+      "- **비건**을 고려할 경우, 드레싱이나 수프의 크림 성분(동물성 여부)을 미리 확인하는 것이 좋습니다.  \n",
+      "- 레스토랑에 **비건 옵션**이 있는지 문의하면 더 정확한 추천이 가능할 것입니다.  \n",
+      "\n",
+      "건강한 식사 되세요! 🌱\n"
      ]
     }
    ],
@@ -182,6 +185,21 @@
     "retriever = menu_db.as_retriever(\n",
     "    search_kwargs={\"k\": 6}\n",
     ")\n",
+    "\n",
+    "query = \"채식주의자를 위한 메뉴를 추천해주세요.\"\n",
+    "retrieved_docs = retriever.invoke(query)\n",
+    "\n",
+    "# 검색된 문서 출력\n",
+    "for doc in retrieved_docs:\n",
+    "    print(vars(doc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# RAG 체인 구성\n",
     "rag_chain = (\n",
@@ -858,7 +876,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "chatbot-0lCeHk3W-py3.12",
+   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
    "language": "python",
    "name": "python3"
   },
